<resources>
    <string name="app_name">TranzLator</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="tranzlator">TranzLator</string>
    <string name="ready_to_talk_to_world">Ready to talk to world?</string>
    <string name="share">Share</string>
    <string name="full_screen">Full Screen</string>
    <string name="reverse_translation">Reverse Translation</string>
    <string name="conversation">Conversation</string>
    <string name="translate">Translate</string>
    <string name="dictionary">Dictionary</string>
    <string name="tap_to_enter_text">Tap to enter text</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="clear_history">Clear History</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="history">History</string>
    <string name="spoken_text">spoken text</string>
    <string name="translated_text">translated text</string>
    
    <!--String values of supported languages-->
    <string-array name="supportedLanguages">
        <item>Afrikaans</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Azerbaijani</item>

        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>

        <item>Catalan</item>
        <item>Cebuano</item>
        <item>Chinese (Simplified)</item>
        <item>Chinese (Traditional)</item>
        <item>Corsican</item>
        <item>Croatian</item>
        <item>Czech</item>

        <item>Danish</item>
        <item>Dutch</item>

        <item>English</item>
        <item>Esperanto</item>
        <item>Estonian</item>

        <item>Finnish</item>
        <item>French</item>
        <item>Frisian</item>

        <item>Galician</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Greek</item>
        <item>Gujarati</item>

        <item>Haitian Creole</item>
        <item>Hausa</item>
        <item>Hawaiian</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hmong</item>
        <item>Hungarian</item>

        <item>Icelandic</item>
        <item>Igbo</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>

        <item>Japanese</item>
        <item>Japanese</item>

        <item>Kannada</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>Kinyarwanda</item>
        <item>Korean</item>
        <item>Kurdish</item>
        <item>Kyrgyz</item>

        <item>Lao</item>
        <item>Latvian</item>
        <item>Latvian</item>
        <item>Luxembourgish</item>

        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Mongolian</item>
        <item>Myanmar (Burmese)</item>

        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Nyanja (Chichewa)</item>

        <item>Odia (Oriya)</item>

        <item>Pashto</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese (Portugal, Brazil)</item>
        <item>Punjabi</item>

        <item>Romanian</item>
        <item>Russian</item>

        <item>Samoan</item>
        <item>Scots Gaelic</item>
        <item>Serbian</item>
        <item>Sesotho</item>
        <item>Shona</item>
        <item>Sindhi</item>
        <item>Sinhala (Sinhalese)</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Sundanese</item>
        <item>Swahili</item>
        <item>Swedish</item>

        <item>Tagalog (Filipino)</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Turkmen</item>

        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uyghur</item>
        <item>Uzbek</item>

        <item>Vietnamese</item>

        <item>Welsh</item>

        <item>Xhosa</item>

        <item>Yiddish</item>
        <item>Yoruba</item>

        <item>Zulu</item>

    </string-array>

    <string-array name="languagesCodes">
        <item>af</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Azerbaijani</item>

        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>

        <item>Catalan</item>
        <item>Cebuano</item>
        <item>Chinese (Simplified)</item>
        <item>Chinese (Traditional)</item>
        <item>Corsican</item>
        <item>Croatian</item>
        <item>Czech</item>

        <item>Danish</item>
        <item>Dutch</item>

        <item>English</item>
        <item>Esperanto</item>
        <item>Estonian</item>

        <item>Finnish</item>
        <item>French</item>
        <item>Frisian</item>

        <item>Galician</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Greek</item>
        <item>Gujarati</item>

        <item>Haitian Creole</item>
        <item>Hausa</item>
        <item>Hawaiian</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hmong</item>
        <item>Hungarian</item>

        <item>Icelandic</item>
        <item>Igbo</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>

        <item>Japanese</item>
        <item>Japanese</item>

        <item>Kannada</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>Kinyarwanda</item>
        <item>Korean</item>
        <item>Kurdish</item>
        <item>Kyrgyz</item>

        <item>Lao</item>
        <item>Latvian</item>
        <item>Latvian</item>
        <item>Luxembourgish</item>

        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Mongolian</item>
        <item>Myanmar (Burmese)</item>

        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Nyanja (Chichewa)</item>

        <item>Odia (Oriya)</item>

        <item>Pashto</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese (Portugal, Brazil)</item>
        <item>Punjabi</item>

        <item>Romanian</item>
        <item>Russian</item>

        <item>Samoan</item>
        <item>Scots Gaelic</item>
        <item>Serbian</item>
        <item>Sesotho</item>
        <item>Shona</item>
        <item>Sindhi</item>
        <item>Sinhala (Sinhalese)</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Sundanese</item>
        <item>Swahili</item>
        <item>Swedish</item>

        <item>Tagalog (Filipino)</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Turkmen</item>

        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uyghur</item>
        <item>Uzbek</item>

        <item>Vietnamese</item>

        <item>Welsh</item>

        <item>Xhosa</item>

        <item>Yiddish</item>
        <item>Yoruba</item>

        <item>Zulu</item>

    </string-array>

</resources>