<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

            <item
                android:id="@+id/nav_drawer_dark_mode"
                android:title="@string/dark_mode"
                android:icon="@drawable/ic_dark_mode"
                app:actionViewClass="android.widget.Switch"/>

            <item
                android:id="@+id/nav_drawer_remove_ads"
                android:title="@string/remove_ads"
                android:icon="@drawable/ic_remove_ads"/>

            <item
                android:id="@+id/nav_drawer_share"
                android:title="@string/share_with_friends"
                android:icon="@drawable/ic_share"/>

            <item
                android:id="@+id/nav_drawer_clear_history"
                android:title="@string/clear_history"
                android:icon="@drawable/ic_clear_history"/>

            <item
                android:id="@+id/nav_drawer_privacy_policy"
                android:title="@string/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"/>


</menu>